--- a/404.html
+++ b/404.html
@@ -97,8 +97,8 @@
         <div class="footer-container"><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2021</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">SpikeQiang</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
             <div>
                 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-                <i class="fa fa-user"></i>  <span id="busuanzi_value_site_pv"></span>|
-                <i class="fa fa-eye"></i> <span id="busuanzi_value_site_uv"></span>人次
+                <i class="fa fa-user"></i>  <span id="busuanzi_value_site_uv"></span>|
+                <i class="fa fa-eye"></i> <span id="busuanzi_value_site_pv"></span>人次
              </div>
         </div>
     </footer></div>
